--- a/index.html
+++ b/index.html
@@ -71,19 +71,19 @@
 <h2></h2>
           </div>
           <div id="Premium" class="content-region hide">
-            <h2>UPDATING.</h2>
+            <h2>UPDATING.....</h2>
             <p>
 <h2></h2>
           </div>
           
           <div id="Fitch" class="content-region hide">
-            <h2>UPDATING..</h2>
+            <h2>UPDATING......</h2>
             <p>
 <h2></h2>
           </div>
                   
           <div id="OTHERS" class="content-region hide">
-            <h2>UPDATING....</h2>
+            <h2>UPDATING.......</h2>
             <p>
 <h2></h2>
           </div>
