--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <header id="header">
       <img src="javsubs91.gif">
-      <h1>720p UPDATE</h1>
+      <h4>720p UPDATE (April, 14)</h4>
       
       <!-- Menu link fragment #id should match a div id. Example: <a href="#home"> links to <div id="home"></div>  -->
       <ul class="main-menu">
