--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
         <li><a href="#Honnaka">Honnaka</a></li>
         <li><a href="#Premium">Premium</a></li>
         <li><a href="#Fitch">Fitch</a></li>
+        <li><a href="#E-body">E-body</a></li>
         <li><a href="#OTHERS">OTHERS</a></li>
       </ul>                 
     </header>
@@ -77,6 +78,12 @@
           </div>
           
           <div id="Fitch" class="content-region hide">
+            <h2>UPDATING......</h2>
+            <p>
+<h2></h2>
+          </div>
+          
+          <div id="E-body" class="content-region hide">
             <h2>UPDATING......</h2>
             <p>
 <h2></h2>
